add structure and paths

--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -2,5 +2,8 @@
 	"appId": "io.ionic.starter",
 	"appName": "boilerplate",
 	"webDir": "dist",
-	"bundledWebRuntime": false
+	"bundledWebRuntime": false,
+	"server": {
+		"url": "http://192.168.178.20:8100"
+	}
 }
