--- a/package.json
+++ b/package.json
@@ -20,12 +20,18 @@
         "@ionic/pwa-elements": "^3.1.1",
         "@ionic/vue": "^6.0.0",
         "@ionic/vue-router": "^6.0.0",
+        "app-root-path": "^3.0.0",
         "core-js": "^3.6.5",
         "vue": "^3.2.21",
+        "vue-class-component": "^8.0.0-rc.1",
+        "vue-property-decorator": "^10.0.0-rc.3",
         "vue-router": "^4.0.12"
     },
     "devDependencies": {
+        "@babel/plugin-proposal-class-properties": "^7.16.7",
+        "@babel/plugin-proposal-decorators": "^7.16.7",
         "@capacitor/cli": "3.3.3",
+        "@ionic/cli": "^6.18.1",
         "@types/jest": "^27.0.2",
         "@typescript-eslint/eslint-plugin": "^5.6.0",
         "@typescript-eslint/parser": "^5.6.0",
@@ -44,7 +50,11 @@
         "eslint": "^8.4.1",
         "eslint-plugin-vue": "^8.2.0",
         "jest": "^27.3.1",
+        "native-run": "^1.5.0",
+        "node-sass": "^7.0.1",
+        "sass-loader": "^12.4.0",
         "ts-jest": "^27.0.7",
+        "tsconfig-paths-webpack-plugin": "^3.5.2",
         "typescript": "^4.3.5"
     },
     "description": "An Ionic project"
