--- a/src/common/tsconfig.json
+++ b/src/common/tsconfig.json
@@ -1,12 +1,14 @@
 {
     "extends": "./../../tsconfig.json",
-    "baseUrl": ".",
-    "paths": {
-        "~common/*": [
-            "./*"
-        ],
-        "~env/*": [
-            "./*"
-        ]
-    }
+    "compilerOptions": {
+        "baseUrl": ".",
+        "paths": {
+            "~common/*": [
+                "./*"
+            ],
+            "~env/*": [
+                "./*"
+            ]
+        }
+    },
 }
