--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@ionic/vue-router": "^6.0.0",
         "app-root-path": "^3.0.0",
         "core-js": "^3.6.5",
+        "mongoose": "^6.1.6",
         "vue": "^3.2.21",
         "vue-class-component": "^8.0.0-rc.1",
         "vue-property-decorator": "^10.0.0-rc.3",
