--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "app-root-path": "^3.0.0",
         "core-js": "^3.20.3",
         "mongoose": "^6.1.7",
+        "reflect-metadata": "^0.1.13",
         "vue": "^3.2.28",
         "vue-class-component": "^8.0.0-rc.1",
         "vue-property-decorator": "^10.0.0-rc.3",
