--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "version": "0.0.1",
     "private": true,
     "scripts": {
+        "dev": "npm-run-all -p dev:*",
+        "dev:app": "ionic cap run android -l --external",
         "serve": "vue-cli-service serve",
         "build": "vue-cli-service build",
         "test:unit": "vue-cli-service test:unit",
@@ -24,6 +26,7 @@
         "core-js": "^3.20.3",
         "mongoose": "^6.1.7",
         "reflect-metadata": "^0.1.13",
+        "tslib": "^2.3.1",
         "vue": "^3.2.28",
         "vue-class-component": "^8.0.0-rc.1",
         "vue-property-decorator": "^10.0.0-rc.3",
@@ -54,6 +57,7 @@
         "jest": "^27.4.7",
         "native-run": "^1.5.0",
         "node-sass": "^7.0.1",
+        "npm-run-all": "^4.1.5",
         "sass-loader": "^12.4.0",
         "ts-jest": "^27.1.3",
         "tsconfig-paths-webpack-plugin": "^3.5.2",
