try to add reflection

--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -14,6 +14,10 @@
             ]
         }
     },
+    "reflection": {
+        "metadata": false,
+        "debugMode": false
+    },
     "include": [
         "./**/*.ts",
         "./**/*.tsx",
