--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,6 +35,11 @@
             "dom",
             "dom.iterable",
             "scripthost"
+        ],
+        "plugins": [
+            {
+                "transform": "tst-reflect-transformer"
+            }
         ]
     },
     "include": [
