--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "mongoose": "^6.1.7",
         "reflect-metadata": "^0.1.13",
         "tslib": "^2.3.1",
+        "tst-reflect": "^0.6.0-alpha.5",
         "vue": "^3.2.28",
         "vue-class-component": "^8.0.0-rc.1",
         "vue-property-decorator": "^10.0.0-rc.3",
@@ -61,6 +62,8 @@
         "sass-loader": "^12.4.0",
         "ts-jest": "^27.1.3",
         "tsconfig-paths-webpack-plugin": "^3.5.2",
+        "tst-reflect-transformer": "^0.8.5-alpha.0",
+        "ttypescript": "^1.5.13",
         "typescript": "^4.5.5"
     },
     "description": "An Ionic project"
