--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -11,12 +11,11 @@
             ],
             "~env/*": [
                 "./*"
+            ],
+            "~test/*": [
+                "./*"
             ]
         }
-    },
-    "reflection": {
-        "metadata": false,
-        "debugMode": false
     },
     "include": [
         "./**/*.ts",
