--- a/src/common/tsconfig.json
+++ b/src/common/tsconfig.json
@@ -8,7 +8,10 @@
             ],
             "~env/*": [
                 "./*"
+            ],
+            "~test/*": [
+                "./*"
             ]
         }
-    },
+    }
 }
