--- a/tsconfig.json
+++ b/tsconfig.json
@@ -38,7 +38,7 @@
         ],
         "plugins": [
             {
-                "transform": "tst-reflect-transformer"
+                "transform": "./dev/transformers/TypeReflectionTransformer.ts"
             }
         ]
     },
