--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
         "@ionic/vue-router": "^6.0.3",
         "app-root-path": "^3.0.0",
         "core-js": "^3.20.3",
+        "deepdash-es": "^5.3.9",
         "lodash": "^4.17.21",
         "mongoose": "^6.1.7",
+        "on-change": "^4.0.0",
         "reflect-metadata": "^0.1.13",
         "tslib": "^2.3.1",
-        "tst-reflect": "^0.6.0-alpha.5",
         "vue": "^3.2.28",
         "vue-class-component": "^8.0.0-rc.1",
         "vue-property-decorator": "^10.0.0-rc.3",
@@ -64,7 +65,6 @@
         "sass-loader": "^12.4.0",
         "ts-jest": "^27.1.3",
         "tsconfig-paths-webpack-plugin": "^3.5.2",
-        "tst-reflect-transformer": "^0.8.5-alpha.0",
         "ttypescript": "^1.5.13",
         "type-fest": "^2.11.0",
         "typescript": "^4.5.5"
