--- a/package.json
+++ b/package.json
@@ -20,53 +20,53 @@
         "@capacitor/keyboard": "1.2.0",
         "@capacitor/status-bar": "1.0.6",
         "@ionic/pwa-elements": "^3.1.1",
-        "@ionic/vue": "^6.0.3",
-        "@ionic/vue-router": "^6.0.3",
+        "@ionic/vue": "^6.0.8",
+        "@ionic/vue-router": "^6.0.8",
         "app-root-path": "^3.0.0",
-        "core-js": "^3.20.3",
+        "core-js": "^3.21.1",
         "deepdash-es": "^5.3.9",
         "lodash": "^4.17.21",
-        "mongoose": "^6.1.7",
+        "mongoose": "^6.2.2",
         "on-change": "^4.0.0",
         "reflect-metadata": "^0.1.13",
         "tslib": "^2.3.1",
-        "vue": "^3.2.28",
+        "vue": "^3.2.31",
         "vue-class-component": "^8.0.0-rc.1",
         "vue-property-decorator": "^10.0.0-rc.3",
         "vue-router": "^4.0.12"
     },
     "devDependencies": {
         "@babel/plugin-proposal-class-properties": "^7.16.7",
-        "@babel/plugin-proposal-decorators": "^7.16.7",
+        "@babel/plugin-proposal-decorators": "^7.17.2",
         "@capacitor/cli": "3.3.3",
         "@ionic/cli": "^6.18.1",
         "@types/jest": "^27.4.0",
         "@types/lodash": "^4.14.178",
-        "@typescript-eslint/eslint-plugin": "^5.10.0",
-        "@typescript-eslint/parser": "^5.10.0",
-        "@vue/cli-plugin-babel": "~5.0.0-rc.1",
-        "@vue/cli-plugin-e2e-cypress": "~5.0.0-rc.1",
-        "@vue/cli-plugin-eslint": "~5.0.0-rc.1",
-        "@vue/cli-plugin-router": "~5.0.0-rc.1",
-        "@vue/cli-plugin-typescript": "~5.0.0-rc.1",
-        "@vue/cli-plugin-unit-jest": "~5.0.0-rc.1",
-        "@vue/cli-service": "~5.0.0-rc.1",
+        "@typescript-eslint/eslint-plugin": "^5.12.0",
+        "@typescript-eslint/parser": "^5.12.0",
+        "@vue/cli-plugin-babel": "^5.0.1",
+        "@vue/cli-plugin-e2e-cypress": "^5.0.1",
+        "@vue/cli-plugin-eslint": "^5.0.1",
+        "@vue/cli-plugin-router": "^5.0.1",
+        "@vue/cli-plugin-typescript": "^5.0.1",
+        "@vue/cli-plugin-unit-jest": "^5.0.1",
+        "@vue/cli-service": "^5.0.1",
         "@vue/eslint-config-typescript": "^9.1.0",
-        "@vue/test-utils": "^2.0.0-rc.16",
+        "@vue/test-utils": "^2.0.0-rc.18",
         "@vue/vue3-jest": "^27.0.0-alpha.3",
-        "babel-jest": "^27.4.6",
+        "babel-jest": "^27.5.1",
         "cypress": "^8.7.0",
-        "eslint": "^8.7.0",
-        "eslint-plugin-vue": "^8.3.0",
-        "jest": "^27.4.7",
+        "eslint": "^8.9.0",
+        "eslint-plugin-vue": "^8.4.1",
+        "jest": "^27.5.1",
         "native-run": "^1.5.0",
         "node-sass": "^7.0.1",
         "npm-run-all": "^4.1.5",
-        "sass-loader": "^12.4.0",
+        "sass-loader": "^12.6.0",
         "ts-jest": "^27.1.3",
         "tsconfig-paths-webpack-plugin": "^3.5.2",
         "ttypescript": "^1.5.13",
-        "type-fest": "^2.11.0",
+        "type-fest": "^2.12.0",
         "typescript": "^4.5.5"
     },
     "description": "An Ionic project"
