implement array change observer

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "on-change": "^4.0.0",
         "reflect-metadata": "^0.1.13",
         "tslib": "^2.3.1",
+        "uuid": "^8.3.2",
         "vue": "^3.2.31",
         "vue-class-component": "^8.0.0-rc.1",
         "vue-property-decorator": "^10.0.0-rc.3",
@@ -42,6 +43,7 @@
         "@ionic/cli": "^6.18.1",
         "@types/jest": "^27.4.0",
         "@types/lodash": "^4.14.178",
+        "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^5.12.0",
         "@typescript-eslint/parser": "^5.12.0",
         "@vue/cli-plugin-babel": "^5.0.1",
