--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "boilerplate",
+    "description": "Building web apps and mobile apps decoupled from data with one code base as fullstack",
     "version": "0.0.1",
     "private": true,
     "scripts": {
@@ -26,10 +27,11 @@
         "core-js": "^3.21.1",
         "deepdash-es": "^5.3.9",
         "lodash": "^4.17.21",
-        "mongoose": "^6.2.2",
         "on-change": "^4.0.0",
         "reflect-metadata": "^0.1.13",
+        "sql.js": "^1.6.2",
         "tslib": "^2.3.1",
+        "typeorm": "^0.2.45",
         "uuid": "^8.3.2",
         "vue": "^3.2.31",
         "vue-class-component": "^8.0.0-rc.1",
@@ -41,8 +43,10 @@
         "@babel/plugin-proposal-decorators": "^7.17.2",
         "@capacitor/cli": "3.3.3",
         "@ionic/cli": "^6.18.1",
+        "@types/app-root-path": "^1.2.4",
         "@types/jest": "^27.4.0",
         "@types/lodash": "^4.14.178",
+        "@types/node": "^17.0.21",
         "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^5.12.0",
         "@typescript-eslint/parser": "^5.12.0",
@@ -66,10 +70,12 @@
         "npm-run-all": "^4.1.5",
         "sass-loader": "^12.6.0",
         "ts-jest": "^27.1.3",
+        "ts-loader": "^9.2.8",
+        "ts-node": "^10.7.0",
         "tsconfig-paths-webpack-plugin": "^3.5.2",
         "ttypescript": "^1.5.13",
         "type-fest": "^2.12.0",
-        "typescript": "^4.5.5"
-    },
-    "description": "An Ionic project"
+        "typescript": "^4.5.5",
+        "webpack": "^5.70.0"
+    }
 }
