--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
         "@ionic/cli": "^6.18.1",
         "@types/app-root-path": "^1.2.4",
         "@types/jest": "^27.4.0",
-        "@types/lodash": "^4.14.178",
+        "@types/lodash": "^4.14.179",
         "@types/node": "^17.0.21",
         "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^5.12.0",
@@ -64,6 +64,8 @@
         "babel-jest": "^27.5.1",
         "cypress": "^8.7.0",
         "eslint": "^8.9.0",
+        "eslint-import-resolver-typescript": "^2.5.0",
+        "eslint-plugin-import": "^2.25.4",
         "eslint-plugin-vue": "^8.4.1",
         "jest": "^27.5.1",
         "native-run": "^1.5.0",
