fix member ordering

--- a/.eslintrc
+++ b/.eslintrc
@@ -40,6 +40,7 @@
                 "prefer": "type-imports"
             }
         ],
+        "@typescript-eslint/member-ordering": "error",
         "@typescript-eslint/explicit-member-accessibility": "error",
         "@typescript-eslint/indent": [
             "error",
