--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "build": "vue-cli-service build",
         "test:unit": "vue-cli-service test:unit",
         "test:e2e": "vue-cli-service test:e2e",
-        "lint": "vue-cli-service lint"
+        "lint": "vue-cli-service lint",
+        "type-coverage": "typescript-coverage-report"
     },
     "dependencies": {
         "@capacitor/android": "3.3.3",
@@ -75,10 +76,13 @@
         "ts-jest": "^27.1.4",
         "ts-loader": "^9.2.8",
         "ts-node": "^10.7.0",
+        "ts-plugin-type-coverage": "^2.21.1",
         "tsconfig-paths-webpack-plugin": "^3.5.2",
         "ttypescript": "^1.5.13",
+        "type-coverage": "^2.21.1",
         "type-fest": "^2.12.1",
         "typescript": "^4.6.3",
+        "typescript-coverage-report": "^0.6.4",
         "webpack": "^5.70.0"
     }
 }
