update dev dependencies

--- a/package.json
+++ b/package.json
@@ -42,17 +42,17 @@
         "zod": "^3.15.1"
     },
     "devDependencies": {
-        "@babel/plugin-proposal-class-properties": "^7.16.7",
-        "@babel/plugin-proposal-decorators": "^7.17.9",
+        "@babel/plugin-proposal-class-properties": "^7.17.12",
+        "@babel/plugin-proposal-decorators": "^7.17.12",
         "@capacitor/cli": "3.3.3",
-        "@ionic/cli": "^6.19.0",
+        "@ionic/cli": "^6.19.1",
         "@types/app-root-path": "^1.2.4",
-        "@types/jest": "^27.4.1",
+        "@types/jest": "^27.5.1",
         "@types/lodash": "^4.14.182",
-        "@types/node": "^17.0.25",
+        "@types/node": "^17.0.34",
         "@types/uuid": "^8.3.4",
-        "@typescript-eslint/eslint-plugin": "^5.20.0",
-        "@typescript-eslint/parser": "^5.20.0",
+        "@typescript-eslint/eslint-plugin": "^5.25.0",
+        "@typescript-eslint/parser": "^5.25.0",
         "@vue/cli-plugin-babel": "^5.0.4",
         "@vue/cli-plugin-e2e-cypress": "^5.0.4",
         "@vue/cli-plugin-eslint": "^5.0.4",
@@ -62,28 +62,28 @@
         "@vue/cli-service": "^5.0.4",
         "@vue/eslint-config-typescript": "^10.0.0",
         "@vue/test-utils": "^2.0.0-rc.21",
-        "@vue/vue3-jest": "^27.0.0-alpha.3",
+        "@vue/vue3-jest": "^27.0.0",
         "babel-jest": "^27.5.1",
         "cypress": "^8.7.0",
-        "eslint": "^8.14.0",
+        "eslint": "^8.15.0",
         "eslint-import-resolver-typescript": "^2.7.1",
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-vue": "^8.7.1",
         "jest": "^27.5.1",
-        "native-run": "^1.5.0",
+        "native-run": "^1.6.0",
         "node-sass": "^7.0.1",
         "npm-run-all": "^4.1.5",
         "sass-loader": "^12.6.0",
         "ts-jest": "^27.1.4",
-        "ts-loader": "^9.2.8",
+        "ts-loader": "^9.3.0",
         "ts-node": "^10.7.0",
         "ts-plugin-type-coverage": "^2.21.1",
         "tsconfig-paths-webpack-plugin": "^3.5.2",
         "ttypescript": "^1.5.13",
         "type-coverage": "^2.21.1",
         "type-fest": "^2.12.2",
-        "typescript": "^4.6.3",
+        "typescript": "^4.6.4",
         "typescript-coverage-report": "^0.6.4",
-        "webpack": "^5.72.0"
+        "webpack": "^5.72.1"
     }
 }
