first version of basic server

--- a/package.json
+++ b/package.json
@@ -25,10 +25,18 @@
         "@ionic/vue": "^6.1.5",
         "@ionic/vue-router": "^6.1.5",
         "app-root-path": "^3.0.0",
+        "compression": "^1.7.4",
         "core-js": "^3.22.5",
+        "csurf": "^1.11.0",
         "deepdash-es": "^5.3.9",
+        "express": "^4.18.1",
+        "express-session": "^1.17.3",
+        "helmet": "^5.1.0",
+        "hpp": "^0.2.3",
         "localforage": "^1.10.0",
         "lodash": "^4.17.21",
+        "ms": "^2.1.3",
+        "normalize-url": "^7.0.3",
         "on-change": "^4.0.1",
         "reflect-metadata": "^0.1.13",
         "sql.js": "^1.6.2",
@@ -47,8 +55,14 @@
         "@capacitor/cli": "3.3.3",
         "@ionic/cli": "^6.19.1",
         "@types/app-root-path": "^1.2.4",
+        "@types/compression": "^1.7.2",
+        "@types/csurf": "^1.11.2",
+        "@types/express": "^4.17.13",
+        "@types/express-session": "^1.17.4",
+        "@types/hpp": "^0.2.2",
         "@types/jest": "^27.5.1",
         "@types/lodash": "^4.14.182",
+        "@types/ms": "^0.7.31",
         "@types/node": "^17.0.34",
         "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^5.25.0",
