--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
         "express-session": "^1.17.3",
         "helmet": "^5.1.0",
         "hpp": "^0.2.3",
+        "i18next": "^21.8.3",
+        "i18next-browser-languagedetector": "^6.1.4",
+        "i18next-http-middleware": "^3.2.0",
         "localforage": "^1.10.0",
         "lodash": "^4.17.21",
         "ms": "^2.1.3",
@@ -47,6 +50,7 @@
         "vue-class-component": "^8.0.0-rc.1",
         "vue-property-decorator": "^10.0.0-rc.3",
         "vue-router": "^4.0.15",
+        "yaml": "^2.1.0",
         "zod": "^3.16.0"
     },
     "devDependencies": {
@@ -98,6 +102,7 @@
         "type-fest": "^2.12.2",
         "typescript": "^4.6.4",
         "typescript-coverage-report": "^0.6.4",
-        "webpack": "^5.72.1"
+        "webpack": "^5.72.1",
+        "yaml-loader": "^0.8.0"
     }
 }
