--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "express-session": "^1.17.3",
         "helmet": "^5.1.0",
         "hpp": "^0.2.3",
+        "http-errors": "^2.0.0",
         "i18next": "^21.8.3",
         "i18next-browser-languagedetector": "^6.1.4",
         "i18next-http-middleware": "^3.2.0",
@@ -64,6 +65,7 @@
         "@types/express": "^4.17.13",
         "@types/express-session": "^1.17.4",
         "@types/hpp": "^0.2.2",
+        "@types/http-errors": "^1.8.2",
         "@types/jest": "^27.5.1",
         "@types/lodash": "^4.14.182",
         "@types/ms": "^0.7.31",
