--- a/package.json
+++ b/package.json
@@ -56,56 +56,56 @@
         "zod": "^3.16.0"
     },
     "devDependencies": {
-        "@babel/plugin-proposal-class-properties": "^7.17.12",
-        "@babel/plugin-proposal-decorators": "^7.17.12",
+        "@babel/plugin-proposal-class-properties": "^7.18.6",
+        "@babel/plugin-proposal-decorators": "^7.18.10",
         "@capacitor/cli": "3.3.3",
-        "@ionic/cli": "^6.19.1",
+        "@ionic/cli": "^6.20.1",
         "@types/app-root-path": "^1.2.4",
         "@types/compression": "^1.7.2",
         "@types/csurf": "^1.11.2",
         "@types/express": "^4.17.13",
-        "@types/express-session": "^1.17.4",
+        "@types/express-session": "^1.17.5",
         "@types/hpp": "^0.2.2",
         "@types/http-errors": "^1.8.2",
-        "@types/jest": "^27.5.1",
+        "@types/jest": "^28.1.6",
         "@types/lodash": "^4.14.182",
         "@types/ms": "^0.7.31",
-        "@types/node": "^17.0.34",
+        "@types/node": "^18.6.5",
         "@types/uuid": "^8.3.4",
-        "@typescript-eslint/eslint-plugin": "^5.25.0",
-        "@typescript-eslint/parser": "^5.25.0",
-        "@vue/cli-plugin-babel": "^5.0.4",
-        "@vue/cli-plugin-e2e-cypress": "^5.0.4",
-        "@vue/cli-plugin-eslint": "^5.0.4",
-        "@vue/cli-plugin-router": "^5.0.4",
-        "@vue/cli-plugin-typescript": "^5.0.4",
-        "@vue/cli-plugin-unit-jest": "^5.0.4",
-        "@vue/cli-service": "^5.0.4",
-        "@vue/eslint-config-typescript": "^10.0.0",
-        "@vue/test-utils": "^2.0.0-rc.21",
-        "@vue/vue3-jest": "^27.0.0",
-        "babel-jest": "^27.5.1",
+        "@typescript-eslint/eslint-plugin": "^5.33.0",
+        "@typescript-eslint/parser": "^5.33.0",
+        "@vue/cli-plugin-babel": "^5.0.8",
+        "@vue/cli-plugin-e2e-cypress": "^5.0.8",
+        "@vue/cli-plugin-eslint": "^5.0.8",
+        "@vue/cli-plugin-router": "^5.0.8",
+        "@vue/cli-plugin-typescript": "^5.0.8",
+        "@vue/cli-plugin-unit-jest": "^5.0.8",
+        "@vue/cli-service": "^5.0.8",
+        "@vue/eslint-config-typescript": "^11.0.0",
+        "@vue/test-utils": "^2.0.2",
+        "@vue/vue3-jest": "^28.0.1",
+        "babel-jest": "^28.1.3",
         "cypress": "^8.7.0",
-        "eslint": "^8.15.0",
+        "eslint": "^8.21.0",
         "eslint-import-resolver-typescript": "^2.7.1",
         "eslint-plugin-import": "^2.26.0",
-        "eslint-plugin-vue": "^8.7.1",
-        "jest": "^27.5.1",
+        "eslint-plugin-vue": "^9.3.0",
+        "jest": "^28.1.3",
         "native-run": "^1.6.0",
         "node-sass": "^7.0.1",
         "npm-run-all": "^4.1.5",
         "sass-loader": "^12.6.0",
-        "ts-jest": "^27.1.4",
-        "ts-loader": "^9.3.0",
-        "ts-node": "^10.7.0",
-        "ts-plugin-type-coverage": "^2.21.1",
+        "ts-jest": "^28.0.7",
+        "ts-loader": "^9.3.1",
+        "ts-node": "^10.9.1",
+        "ts-plugin-type-coverage": "^2.22.0",
         "tsconfig-paths-webpack-plugin": "^3.5.2",
         "ttypescript": "^1.5.13",
-        "type-coverage": "^2.21.1",
-        "type-fest": "^2.12.2",
-        "typescript": "^4.6.4",
+        "type-coverage": "^2.22.0",
+        "type-fest": "^2.18.0",
+        "typescript": "^4.7.4",
         "typescript-coverage-report": "^0.6.4",
-        "webpack": "^5.72.1",
+        "webpack": "^5.74.0",
         "yaml-loader": "^0.8.0"
     }
 }
