--- a/tsconfig.json
+++ b/tsconfig.json
@@ -52,7 +52,8 @@
         "dev/**/*.ts",
         "tests/**/*.ts",
         "tests/**/*.d.ts",
-        "tests/**/*.tsx"
+        "tests/**/*.tsx",
+        "./capacitor.config.ts"
     ],
     "exclude": [
         "node_modules"
