--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "type-coverage": "typescript-coverage-report"
     },
     "dependencies": {
+        "@babel/runtime": "^7.18.9",
         "@capacitor/android": "3.3.3",
         "@capacitor/app": "1.0.7",
         "@capacitor/core": "3.3.3",
@@ -28,6 +29,7 @@
         "compression": "^1.7.4",
         "core-js": "^3.22.5",
         "csurf": "^1.11.0",
+        "deepdash": "^5.3.9",
         "deepdash-es": "^5.3.9",
         "express": "^4.18.1",
         "express-session": "^1.17.3",
@@ -61,14 +63,15 @@
         "@capacitor/cli": "3.3.3",
         "@ionic/cli": "^6.20.1",
         "@types/app-root-path": "^1.2.4",
+        "@types/chai": "^4.3.3",
         "@types/compression": "^1.7.2",
         "@types/csurf": "^1.11.2",
         "@types/express": "^4.17.13",
         "@types/express-session": "^1.17.5",
         "@types/hpp": "^0.2.2",
         "@types/http-errors": "^1.8.2",
-        "@types/jest": "^28.1.6",
         "@types/lodash": "^4.14.182",
+        "@types/mocha": "^9.1.1",
         "@types/ms": "^0.7.31",
         "@types/node": "^18.6.5",
         "@types/uuid": "^8.3.4",
@@ -79,23 +82,20 @@
         "@vue/cli-plugin-eslint": "^5.0.8",
         "@vue/cli-plugin-router": "^5.0.8",
         "@vue/cli-plugin-typescript": "^5.0.8",
-        "@vue/cli-plugin-unit-jest": "^5.0.8",
+        "@vue/cli-plugin-unit-mocha": "^5.0.8",
         "@vue/cli-service": "^5.0.8",
         "@vue/eslint-config-typescript": "^11.0.0",
         "@vue/test-utils": "^2.0.2",
-        "@vue/vue3-jest": "^28.0.1",
-        "babel-jest": "^28.1.3",
+        "chai": "^4.3.6",
         "cypress": "^8.7.0",
         "eslint": "^8.21.0",
         "eslint-import-resolver-typescript": "^3.4.0",
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-vue": "^9.3.0",
-        "jest": "^28.1.3",
         "native-run": "^1.6.0",
         "node-sass": "^7.0.1",
         "npm-run-all": "^4.1.5",
         "sass-loader": "^13.0.2",
-        "ts-jest": "^28.0.7",
         "ts-loader": "^9.3.1",
         "ts-node": "^10.9.1",
         "ts-plugin-type-coverage": "^2.22.0",
