--- a/package.json
+++ b/package.json
@@ -1,111 +1,111 @@
 {
-    "name": "boilerplate",
-    "description": "Building web apps and mobile apps decoupled from data with one code base as fullstack",
-    "version": "0.0.1",
-    "private": true,
-    "scripts": {
-        "dev": "npm-run-all -p dev:*",
-        "dev:app": "ionic cap run android -l --external",
-        "serve": "vue-cli-service serve --env development --deep-monitoring --source-map-support",
-        "build": "vue-cli-service build",
-        "test:unit": "vue-cli-service test:unit",
-        "test:e2e": "vue-cli-service test:e2e",
-        "lint": "vue-cli-service lint",
-        "type-coverage": "typescript-coverage-report"
-    },
-    "dependencies": {
-        "@babel/runtime": "^7.18.9",
-        "@capacitor/android": "3.3.3",
-        "@capacitor/app": "1.0.7",
-        "@capacitor/core": "3.3.3",
-        "@capacitor/haptics": "1.1.3",
-        "@capacitor/ios": "3.3.3",
-        "@capacitor/keyboard": "1.2.0",
-        "@capacitor/status-bar": "1.0.6",
-        "@ionic/pwa-elements": "^3.1.1",
-        "@ionic/vue": "^6.2.1",
-        "@ionic/vue-router": "^6.2.1",
-        "app-root-path": "^3.0.0",
-        "compression": "^1.7.4",
-        "core-js": "^3.22.5",
-        "csurf": "^1.11.0",
-        "deepdash": "^5.3.9",
-        "deepdash-es": "^5.3.9",
-        "express": "^4.18.1",
-        "express-session": "^1.17.3",
-        "file-type": "^17.1.6",
-        "helmet": "^5.1.1",
-        "hpp": "^0.2.3",
-        "http-errors": "^2.0.0",
-        "i18next": "^21.9.0",
-        "i18next-browser-languagedetector": "^6.1.4",
-        "i18next-http-middleware": "^3.2.1",
-        "localforage": "^1.10.0",
-        "lodash": "^4.17.21",
-        "ms": "^2.1.3",
-        "normalize-url": "^7.0.3",
-        "on-change": "^4.0.1",
-        "reflect-metadata": "^0.1.13",
-        "sql.js": "^1.7.0",
-        "tslib": "^2.4.0",
-        "typeorm": "^0.3.7",
-        "uuid": "^8.3.2",
-        "vue": "^3.2.37",
-        "vue-class-component": "^8.0.0-rc.1",
-        "vue-property-decorator": "^10.0.0-rc.3",
-        "vue-router": "^4.1.3",
-        "yaml": "^2.1.1",
-        "zod": "^3.17.10"
-    },
-    "devDependencies": {
-        "@babel/plugin-proposal-class-properties": "^7.18.6",
-        "@babel/plugin-proposal-decorators": "^7.18.10",
-        "@capacitor/cli": "3.3.3",
-        "@ionic/cli": "^6.20.1",
-        "@types/app-root-path": "^1.2.4",
-        "@types/chai": "^4.3.3",
-        "@types/compression": "^1.7.2",
-        "@types/csurf": "^1.11.2",
-        "@types/express": "^4.17.13",
-        "@types/express-session": "^1.17.5",
-        "@types/hpp": "^0.2.2",
-        "@types/http-errors": "^1.8.2",
-        "@types/lodash": "^4.14.182",
-        "@types/mocha": "^9.1.1",
-        "@types/ms": "^0.7.31",
-        "@types/node": "^18.6.5",
-        "@types/uuid": "^8.3.4",
-        "@typescript-eslint/eslint-plugin": "^5.33.0",
-        "@typescript-eslint/parser": "^5.33.0",
-        "@vue/cli-plugin-babel": "^5.0.8",
-        "@vue/cli-plugin-e2e-cypress": "^5.0.8",
-        "@vue/cli-plugin-eslint": "^5.0.8",
-        "@vue/cli-plugin-router": "^5.0.8",
-        "@vue/cli-plugin-typescript": "^5.0.8",
-        "@vue/cli-plugin-unit-mocha": "^5.0.8",
-        "@vue/cli-service": "^5.0.8",
-        "@vue/eslint-config-typescript": "^11.0.0",
-        "@vue/test-utils": "^2.0.2",
-        "chai": "^4.3.6",
-        "cypress": "^8.7.0",
-        "eslint": "^8.21.0",
-        "eslint-import-resolver-typescript": "^3.4.0",
-        "eslint-plugin-import": "^2.26.0",
-        "eslint-plugin-vue": "^9.3.0",
-        "native-run": "^1.6.0",
-        "node-sass": "^7.0.1",
-        "npm-run-all": "^4.1.5",
-        "sass-loader": "^13.0.2",
-        "ts-loader": "^9.3.1",
-        "ts-node": "^10.9.1",
-        "ts-plugin-type-coverage": "^2.22.0",
-        "tsconfig-paths-webpack-plugin": "^4.0.0",
-        "ttypescript": "^1.5.13",
-        "type-coverage": "^2.22.0",
-        "type-fest": "^2.18.0",
-        "typescript": "^4.7.4",
-        "typescript-coverage-report": "^0.6.4",
-        "webpack": "^5.74.0",
-        "yaml-loader": "^0.8.0"
-    }
+  "name": "boilerplate",
+  "description": "Building web apps and mobile apps decoupled from data with one code base as fullstack",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "dev": "npm-run-all -p dev:*",
+    "dev:app": "ionic cap run android -l --external",
+    "serve": "vue-cli-service serve --env development --deep-monitoring --source-map-support",
+    "build": "vue-cli-service build",
+    "test:unit": "vue-cli-service test:unit",
+    "test:e2e": "vue-cli-service test:e2e",
+    "lint": "vue-cli-service lint",
+    "type-coverage": "typescript-coverage-report"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.18.9",
+    "@capacitor/android": "^4.0.0",
+    "@capacitor/app": "^4.0.0",
+    "@capacitor/core": "^4.0.0",
+    "@capacitor/haptics": "^4.0.0",
+    "@capacitor/ios": "^4.0.0",
+    "@capacitor/keyboard": "^4.0.0",
+    "@capacitor/status-bar": "^4.0.0",
+    "@ionic/pwa-elements": "^3.1.1",
+    "@ionic/vue": "^6.2.1",
+    "@ionic/vue-router": "^6.2.1",
+    "app-root-path": "^3.0.0",
+    "compression": "^1.7.4",
+    "core-js": "^3.22.5",
+    "csurf": "^1.11.0",
+    "deepdash": "^5.3.9",
+    "deepdash-es": "^5.3.9",
+    "express": "^4.18.1",
+    "express-session": "^1.17.3",
+    "file-type": "^17.1.6",
+    "helmet": "^5.1.1",
+    "hpp": "^0.2.3",
+    "http-errors": "^2.0.0",
+    "i18next": "^21.9.0",
+    "i18next-browser-languagedetector": "^6.1.4",
+    "i18next-http-middleware": "^3.2.1",
+    "localforage": "^1.10.0",
+    "lodash": "^4.17.21",
+    "ms": "^2.1.3",
+    "normalize-url": "^7.0.3",
+    "on-change": "^4.0.1",
+    "reflect-metadata": "^0.1.13",
+    "sql.js": "^1.7.0",
+    "tslib": "^2.4.0",
+    "typeorm": "^0.3.7",
+    "uuid": "^8.3.2",
+    "vue": "^3.2.37",
+    "vue-class-component": "^8.0.0-rc.1",
+    "vue-property-decorator": "^10.0.0-rc.3",
+    "vue-router": "^4.1.3",
+    "yaml": "^2.1.1",
+    "zod": "^3.17.10"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.18.10",
+    "@capacitor/cli": "^4.0.0",
+    "@ionic/cli": "^6.20.1",
+    "@types/app-root-path": "^1.2.4",
+    "@types/chai": "^4.3.3",
+    "@types/compression": "^1.7.2",
+    "@types/csurf": "^1.11.2",
+    "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.5",
+    "@types/hpp": "^0.2.2",
+    "@types/http-errors": "^1.8.2",
+    "@types/lodash": "^4.14.182",
+    "@types/mocha": "^9.1.1",
+    "@types/ms": "^0.7.31",
+    "@types/node": "^18.6.5",
+    "@types/uuid": "^8.3.4",
+    "@typescript-eslint/eslint-plugin": "^5.33.0",
+    "@typescript-eslint/parser": "^5.33.0",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-e2e-cypress": "^5.0.8",
+    "@vue/cli-plugin-eslint": "^5.0.8",
+    "@vue/cli-plugin-router": "^5.0.8",
+    "@vue/cli-plugin-typescript": "^5.0.8",
+    "@vue/cli-plugin-unit-mocha": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
+    "@vue/eslint-config-typescript": "^11.0.0",
+    "@vue/test-utils": "^2.0.2",
+    "chai": "^4.3.6",
+    "cypress": "^8.7.0",
+    "eslint": "^8.21.0",
+    "eslint-import-resolver-typescript": "^3.4.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-vue": "^9.3.0",
+    "native-run": "^1.6.0",
+    "node-sass": "^7.0.1",
+    "npm-run-all": "^4.1.5",
+    "sass-loader": "^13.0.2",
+    "ts-loader": "^9.3.1",
+    "ts-node": "^10.9.1",
+    "ts-plugin-type-coverage": "^2.22.0",
+    "tsconfig-paths-webpack-plugin": "^4.0.0",
+    "ttypescript": "^1.5.13",
+    "type-coverage": "^2.22.0",
+    "type-fest": "^2.18.0",
+    "typescript": "^4.7.4",
+    "typescript-coverage-report": "^0.6.4",
+    "webpack": "^5.74.0",
+    "yaml-loader": "^0.8.0"
+  }
 }
