migrate to cypress 10

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -53,7 +53,8 @@
         "tests/**/*.ts",
         "tests/**/*.d.ts",
         "tests/**/*.tsx",
-        "./capacitor.config.ts"
+        "./capacitor.config.ts",
+        "./cypress.config.ts"
     ],
     "exclude": [
         "node_modules"
