--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
     "version": "0.0.1",
     "private": true,
     "scripts": {
-        "dev": "npm-run-all -p dev:*",
+        "dev": "npm-run-all -p dev:!(web)",
         "dev:app": "ionic cap run android -l --external",
-        "serve": "vue-cli-service serve --env development --deep-monitoring --source-map-support",
+        "dev:web": "vue-cli-service serve --env development --deep-monitoring --source-map-support",
         "build": "vue-cli-service build",
-        "test:unit": "vue-cli-service test:unit",
+        "test:unit": "nyc --reporter=lcov --reporter=text vue-cli-service test:unit",
         "test:e2e": "vue-cli-service test:e2e",
-        "lint": "vue-cli-service lint && stylelint **/*.scss",
-        "type-coverage": "typescript-coverage-report"
+        "lint": "npm-run-all -s lint:*",
+        "lint:script": "vue-cli-service lint",
+        "lint:style": "stylelint **/*.scss",
+        "type-coverage": "typescript-coverage-report -o ./coverage/type-report"
     },
     "dependencies": {
         "@babel/runtime": "^7.18.9",
@@ -95,6 +97,7 @@
         "native-run": "^1.6.0",
         "node-sass": "^7.0.1",
         "npm-run-all": "^4.1.5",
+        "nyc": "^15.1.0",
         "sass-loader": "^13.0.2",
         "stylelint": "^14.9.1",
         "stylelint-config-clean-order": "^0.9.0",
