--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
                   restore-keys: |
                       ${{ runner.os }}-node-
             - name: Install dependencies
-              run: npm ci
+              run: npm ci --no-optional
 
             - name: Run linting
               run: npm run lint
