--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "lint": "npm-run-all -s lint:*",
         "lint:script": "vue-cli-service lint",
         "lint:style": "stylelint **/*.scss",
-        "type-coverage": "typescript-coverage-report -o ./coverage/type-report"
+        "type-coverage": "typescript-coverage-report -o ./coverage/type-report",
+        "prepare": "is-ci || husky install"
     },
     "dependencies": {
         "@babel/runtime": "^7.18.9",
@@ -94,6 +95,9 @@
         "eslint-import-resolver-typescript": "^3.4.0",
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-vue": "^9.3.0",
+        "husky": "^8.0.1",
+        "is-ci": "^3.0.1",
+        "lint-staged": "^13.0.3",
         "native-run": "^1.6.0",
         "node-sass": "^7.0.1",
         "npm-run-all": "^4.1.5",
