--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
         "@babel/plugin-proposal-class-properties": "^7.18.6",
         "@babel/plugin-proposal-decorators": "^7.18.10",
         "@capacitor/cli": "^4.0.0",
+        "@commitlint/cli": "^17.0.3",
+        "@commitlint/config-conventional": "^17.0.3",
         "@ionic/cli": "^6.20.1",
         "@types/app-root-path": "^1.2.4",
         "@types/chai": "^4.3.3",
