--- a/package.json
+++ b/package.json
@@ -4,27 +4,42 @@
     "version": "0.0.1",
     "private": true,
     "scripts": {
-        "dev": "npm-run-all -p dev:!(web)",
-        "dev:app": "ionic cap run android -l --external",
+        "dev": "npm-run-all -p dev:!(app)",
+        "dev:server": "echo 'no dev:server script'",
         "dev:web": "vue-cli-service serve --env development --deep-monitoring --source-map-support",
-        "build": "vue-cli-service build",
+        "//1": "",
+        "dev:app": "npm run build:web && cap sync && cap run",
+        "dev:app:android": "npm run build:web && cap sync && cap run android",
+        "dev:app:ios": "npm run build:web && cap sync && cap run ios",
+        "//2": "",
+        "build": "npm-run-all -p build:!(app)",
+        "build:server": "echo 'no build:server script'",
+        "build:web": "vue-cli-service build",
+        "//3": "",
+        "build:app": "npm run build:web && cap copy && cap sync && cap open",
+        "build:app:android": "npm run build:web && cap copy && cap sync && cap open android",
+        "build:app:ios": "npm run build:web && cap copy && cap sync && cap open ios",
+        "//4": "",
+        "test": "npm run test:unit && npm run test:e2e",
         "test:unit": "nyc --reporter=lcov --reporter=text vue-cli-service test:unit",
         "test:e2e": "vue-cli-service test:e2e",
-        "lint": "npm-run-all -s lint:*",
+        "//5": "",
+        "lint": "npm-run-all -p lint:*",
         "lint:script": "vue-cli-service lint",
         "lint:style": "stylelint **/*.scss",
+        "//6": "",
         "type-coverage": "typescript-coverage-report -o ./coverage/type-report",
         "prepare": "is-ci || husky install"
     },
     "dependencies": {
         "@babel/runtime": "^7.18.9",
-        "@capacitor/android": "^4.0.0",
-        "@capacitor/app": "^4.0.0",
-        "@capacitor/core": "^4.0.0",
-        "@capacitor/haptics": "^4.0.0",
-        "@capacitor/ios": "^4.0.0",
-        "@capacitor/keyboard": "^4.0.0",
-        "@capacitor/status-bar": "^4.0.0",
+        "@capacitor/android": "4.0.1",
+        "@capacitor/app": "4.0.1",
+        "@capacitor/core": "4.0.1",
+        "@capacitor/haptics": "4.0.1",
+        "@capacitor/ios": "4.0.1",
+        "@capacitor/keyboard": "4.0.1",
+        "@capacitor/status-bar": "4.0.1",
         "@ionic/pwa-elements": "^3.1.1",
         "@ionic/vue": "^6.2.1",
         "@ionic/vue-router": "^6.2.1",
@@ -63,7 +78,7 @@
     "devDependencies": {
         "@babel/plugin-proposal-class-properties": "^7.18.6",
         "@babel/plugin-proposal-decorators": "^7.18.10",
-        "@capacitor/cli": "^4.0.0",
+        "@capacitor/cli": "4.0.1",
         "@commitlint/cli": "^17.0.3",
         "@commitlint/config-conventional": "^17.0.3",
         "@ionic/cli": "^6.20.1",
