--- a/package.json
+++ b/package.json
@@ -116,9 +116,9 @@
         "is-ci": "^3.0.1",
         "lint-staged": "^13.0.3",
         "native-run": "^1.6.0",
-        "node-sass": "^7.0.1",
         "npm-run-all": "^4.1.5",
         "nyc": "^15.1.0",
+        "sass": "^1.54.4",
         "sass-loader": "^13.0.2",
         "stylelint": "^14.9.1",
         "stylelint-config-clean-order": "^0.9.0",
