ci: update commit lint #1

--- a/.commitlintrc
+++ b/.commitlintrc
@@ -30,7 +30,8 @@
                 "route",
                 "attribute",
                 "type",
-                "lint"
+                "lint",
+                "dependencies"
             ]
         ]
     }
