--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
     "description": "Building web apps and mobile apps decoupled from data with one code base as fullstack",
     "version": "0.0.1",
     "private": true,
+    "engineStrict": true,
+    "engines": {
+        "npm": "~8.18.0",
+        "node": ">= 16.16.0"
+    },
     "scripts": {
         "dev": "npm-run-all -p dev:!(app)",
         "dev:server": "echo 'no dev:server script'",
@@ -90,13 +95,13 @@
         "@types/express-session": "^1.17.5",
         "@types/hpp": "^0.2.2",
         "@types/http-errors": "^1.8.2",
-        "@types/lodash": "^4.14.182",
+        "@types/lodash": "^4.14.184",
         "@types/mocha": "^9.1.1",
         "@types/ms": "^0.7.31",
-        "@types/node": "^18.6.5",
+        "@types/node": "^18.7.8",
         "@types/uuid": "^8.3.4",
-        "@typescript-eslint/eslint-plugin": "^5.33.0",
-        "@typescript-eslint/parser": "^5.33.0",
+        "@typescript-eslint/eslint-plugin": "^5.33.1",
+        "@typescript-eslint/parser": "^5.33.1",
         "@vue/cli-plugin-babel": "^5.0.8",
         "@vue/cli-plugin-e2e-cypress": "^5.0.8",
         "@vue/cli-plugin-eslint": "^5.0.8",
@@ -107,11 +112,11 @@
         "@vue/eslint-config-typescript": "^11.0.0",
         "@vue/test-utils": "^2.0.2",
         "chai": "^4.3.6",
-        "cypress": "^10.4.0",
-        "eslint": "^8.21.0",
-        "eslint-import-resolver-typescript": "^3.4.0",
-        "eslint-plugin-import": "^2.26.0",
+        "cypress": "^10.6.0",
+        "eslint": "^8.22.0",
+        "eslint-import-resolver-typescript": "^3.4.2",
         "eslint-plugin-boilerplate": "./dev/eslint-plugin-boilerplate",
+        "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-vue": "^9.3.0",
         "husky": "^8.0.1",
         "is-ci": "^3.0.1",
@@ -119,9 +124,9 @@
         "native-run": "^1.6.0",
         "npm-run-all": "^4.1.5",
         "nyc": "^15.1.0",
-        "sass": "^1.54.4",
+        "sass": "^1.54.5",
         "sass-loader": "^13.0.2",
-        "stylelint": "^14.9.1",
+        "stylelint": "^14.10.0",
         "stylelint-config-clean-order": "^0.9.0",
         "stylelint-config-standard-scss": "^5.0.0",
         "ts-loader": "^9.3.1",
@@ -130,7 +135,7 @@
         "tsconfig-paths-webpack-plugin": "^4.0.0",
         "ttypescript": "^1.5.13",
         "type-coverage": "^2.22.0",
-        "type-fest": "^2.18.0",
+        "type-fest": "^2.18.1",
         "typescript": "^4.7.4",
         "typescript-coverage-report": "^0.6.4",
         "webpack": "^5.74.0",
