--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "build:app:ios": "npm run build:web && cap copy && cap sync && cap open ios",
         "//4": "",
         "test": "npm run test:unit && npm run test:e2e",
-        "test:unit": "nyc --reporter=lcov --reporter=text vue-cli-service test:unit",
+        "test:unit": "cross-env NODE_ENV=test nyc --reporter=lcov --reporter=text vue-cli-service test:unit",
         "test:e2e": "vue-cli-service test:e2e",
         "//5": "",
         "lint": "npm-run-all -p lint:*",
@@ -51,6 +51,7 @@
         "app-root-path": "^3.0.0",
         "compression": "^1.7.4",
         "core-js": "^3.22.5",
+        "cross-env": "^7.0.3",
         "csurf": "^1.11.0",
         "deepdash": "^5.3.9",
         "deepdash-es": "^5.3.9",
@@ -111,6 +112,7 @@
         "@vue/cli-service": "^5.0.8",
         "@vue/eslint-config-typescript": "^11.0.0",
         "@vue/test-utils": "^2.0.2",
+        "babel-plugin-istanbul": "^6.1.1",
         "chai": "^4.3.6",
         "cypress": "^10.6.0",
         "eslint": "^8.22.0",
