test: refactor structure to be able to mock some things #23

--- a/.eslintrc
+++ b/.eslintrc
@@ -184,6 +184,7 @@
                 "project": [
                     "src/client/tsconfig.json",
                     "src/server/tsconfig.json",
+                    "tests/unit/client/tsconfig.json",
                     "dev/eslint-plugin-boilerplate/tsconfig.json"
                 ]
             }
