build(common): add multi environment support and multi path mapping support to type reflection #26

--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -12,7 +12,13 @@
             "~env/*": [
                 "./*"
             ]
-        }
+        },
+        "plugins": [
+            {
+                "transform": "./dev/transformers/TypeReflectionTransformer.ts",
+                "environment": "client"
+            }
+        ]
     },
     "include": [
         "./**/*.ts",
