build(lint): fix environment recognition by activating the rule only for affected environments #21

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,10 +31,13 @@
                 "src/*"
             ],
             "~client/*": [
-                "src/client"
+                "src/client/*"
             ],
             "~server/*": [
-                "src/server"
+                "src/server/*"
+            ],
+            "~common/*": [
+                "src/common/*"
             ],
             "~env/*": [
                 "src/*"
