--- a/package.json
+++ b/package.json
@@ -121,11 +121,14 @@
         "eslint-plugin-import": "^2.26.0",
         "eslint-plugin-vue": "^9.3.0",
         "husky": "^8.0.1",
+        "i": "^0.3.7",
         "is-ci": "^3.0.1",
         "lint-staged": "^13.0.3",
         "native-run": "^1.6.0",
+        "npm": "^8.19.2",
         "npm-run-all": "^4.1.5",
         "nyc": "^15.1.0",
+        "random-input-generator": "^1.0.0",
         "sass": "^1.54.5",
         "sass-loader": "^13.0.2",
         "stylelint": "^14.10.0",
