--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
         "i18next-http-middleware": "^3.2.1",
         "localforage": "^1.10.0",
         "lodash": "^4.17.21",
+        "minimatch": "^5.1.0",
         "ms": "^2.1.3",
         "normalize-url": "^7.2.0",
         "on-change": "^4.0.1",
@@ -138,6 +139,7 @@
         "ts-node": "^10.9.1",
         "ts-plugin-type-coverage": "^2.22.0",
         "tsconfig-paths-webpack-plugin": "^4.0.0",
+        "tsutils": "^3.21.0",
         "ttypescript": "^1.5.13",
         "type-coverage": "^2.22.0",
         "type-fest": "^3.0.0",
