--- a/.gitignore
+++ b/.gitignore
@@ -22,7 +22,9 @@ npm-debug.log*
 /.sass-cache
 /.sourcemaps
 /.versions
-/.vscode
+/.vscode/launch.json
+!/.vscode/settings.json
+!/.vscode/extensions.json
 /coverage
 /dist
 /node_modules
