build(type): add type annotations to match style guide #26

--- a/.eslintrc
+++ b/.eslintrc
@@ -71,6 +71,12 @@
             }
         ],
         "@typescript-eslint/restrict-plus-operands": "error",
+        "@typescript-eslint/typedef": [
+            "error",
+            {
+                "memberVariableDeclaration": true
+            }
+        ],
         "@typescript-eslint/unbound-method": "error",
         "arrow-spacing": [
             "error",
