build(type): switch to new transformer #26

--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -15,7 +15,8 @@
         },
         "plugins": [
             {
-                "transform": "./dev/transformers/TypeReflectionTransformer.ts",
+                "transform": "./dev/typescript-transformer-boilerplate/index.ts",
+                "tsConfigPath": "./src/client/tsconfig.json",
                 "environment": "client"
             }
         ]
