--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -15,7 +15,8 @@
         },
         "plugins": [
             {
-                "transform": "./dev/transformers/TypeReflectionTransformer.ts",
+                "transform": "./dev/typescript-transformer-boilerplate/index.ts",
+                "tsConfigPath": "./src/server/tsconfig.json",
                 "environment": "server"
             }
         ]
