--- a/package.json
+++ b/package.json
@@ -167,6 +167,7 @@
         "typedoc-umlclass": "^0.7.0",
         "typescript": "^4.8.4",
         "typescript-coverage-report": "^0.6.4",
+        "typescript-transformer-boilerplate": "./dev/typescript-transformer-boilerplate/",
         "webpack": "^5.75.0",
         "yaml-loader": "^0.8.0"
     }
