--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -15,7 +15,7 @@
         },
         "plugins": [
             {
-                "transform": "./dev/typescript-transformer-boilerplate/src/index.ts",
+                "transform": "typescript-transformer-boilerplate",
                 "tsConfigPath": "./src/client/tsconfig.json",
                 "environment": "client"
             }
