ci: fix quotes #1

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
         "compile:dev:client:config": "cross-env NODE_ENV=development TS_CONFIG_PATH=src/client/tsconfig.json ENVIRONMENT=client gulp",
         "//2": "",
         "build": "npm-run-all -p build:!(app)",
-        "build:server": "echo 'no build:server script'",
+        "build:server": "echo \"no build:server script\"",
         "build:web": "npm run compile:build:client:config && cross-env NODE_OPTIONS=--no-warnings vue-cli-service build",
         "//2b": "",
         "compile:build:server:config": "cross-env NODE_ENV=production TS_CONFIG_PATH=src/server/tsconfig.json ENVIRONMENT=server gulp",
@@ -34,7 +34,7 @@
         "//4": "",
         "test": "npm run test:unit && npm run test:e2e",
         "test:unit": "npm run test:unit:server && npm run test:unit:client",
-        "test:unit:server": "echo 'no test:unit:server script",
+        "test:unit:server": "echo \"no test:unit:server script\"",
         "test:unit:client": "npm run compile:test:unit:client:config && cross-env NODE_ENV=test nyc vue-cli-service test:unit ./tests/unit/client/index.spec.ts",
         "test:e2e": "cross-env NODE_OPTIONS=--no-warnings vue-cli-service test:e2e",
         "//4b": "",
