--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -23,6 +23,7 @@
     },
     "include": [
         "./**/*.ts",
+        "./**/*.mts",
         "./**/*.tsx",
         "./../common/**/*.ts",
         "./../common/**/*.tsx"
