--- a/tsconfig.json
+++ b/tsconfig.json
@@ -57,11 +57,13 @@
         "./@types/*.d.ts",
         "./**/*.js",
         "src/**/*.ts",
+        "src/**/*.mts",
         "src/**/*.d.ts",
         "src/**/*.tsx",
         "src/**/*.vue",
         "dev/**/*.ts",
         "dev/**/*.js",
+        "dev/**/*.mjs",
         "tests/**/*.ts",
         "tests/**/*.d.ts",
         "tests/**/*.tsx",
