build(server): adjust config merging, adjust number type and remove window reference #42

--- a/src/server/configs/default/databases.yml
+++ b/src/server/configs/default/databases.yml
@@ -2,9 +2,6 @@ server:
     type: "postgres"
     host: "localhost"
     port: 5432
-    database: "boilerplate"
-    autoSave: true
-    location: "main"
-    logger: "debug"
-    logging:
-        - "error"
+    username: ""
+    password: ""
+    database: ""
