build(server): cleanup config, split client/server dist #42

--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,6 +1,6 @@
 {
 	"appId": "io.ionic.starter",
 	"appName": "boilerplate",
-	"webDir": "dist",
+	"webDir": "dist/client",
 	"bundledWebRuntime": false
 }
