--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
         "dev:web": "npm run compile:build:client:config && concurrently \"npm run compile:dev:client:config\" \"vue-cli-service serve --env development --deep-monitoring --source-map-support\"",
         "//1": "",
         "dev:app": "npm run build:web && cap sync && cap run",
-        "dev:app:android": "npm run build:web && cap sync && cap run android",
-        "dev:app:ios": "npm run build:web && cap sync && cap run ios",
+        "dev:app:android": "npm run build:web && cap sync && cap run android -l --external --watch",
+        "dev:app:ios": "npm run build:web && cap sync && cap run ios -l --external --watch",
         "//1b": "",
         "compile:dev:server:config": "cross-env NODE_ENV=development TS_CONFIG_PATH=src/server/tsconfig.json ENVIRONMENT=server gulp",
         "compile:dev:client:config": "cross-env NODE_ENV=development TS_CONFIG_PATH=src/client/tsconfig.json ENVIRONMENT=client gulp",
@@ -153,6 +153,7 @@
         "json-to-ts": "^1.7.0",
         "lint-staged": "^13.1.0",
         "make-dir-cli": "^3.0.0",
+        "native-run": "^1.7.1",
         "npm": "^9.2.0",
         "npm-run-all": "^4.1.5",
         "nyc": "^15.1.0",
