--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -1,6 +1,6 @@
 {
 	"appId": "io.ionic.starter",
 	"appName": "boilerplate",
-	"webDir": "dist",
+	"webDir": "dist/client",
 	"bundledWebRuntime": false
 }
